--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/title.css">
 
 
 </head>
 <body>
     <header> <!--header>img+nav>a+a+a+a+a-->
-        <h1>Victor Silva</h1>
+        <img src="assets/img/logov.png" alt="Avatar do Victor Silva">
         <nav>
             <a href="" lang="en">Skills</a>
             <a href="">Projetos</a>
@@ -24,5 +25,6 @@
             <!--a[lang=en]{Download CV} e aperta tab-->
         </nav>
     </header>
+    <h1>Victor Silva</h1>
 </body>
 </html>
